--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ola GitHub IFPR</title>
 </head>
 <body>
-    <h1>OLá GitHub</h1>
+    <h1>OLá GitHub!!!</h1>
+    <H2>Esse gitHub é bacana....</h2>
 </body>
 </html>
